# Voxelizer3000

./: .gitignore  CMakeLists.txt  demo.cpp  objLoader.cpp  objLoader.h
Voxelizer3000/: CMakeLists.txt  array.h  array2d.h  demo.cpp  numtraits.h  objLoader.cpp  objLoader.h  octree.h  point3d.h  shareddata.h  tinyvector.h  vertex.h
